--- a/Content/MainList.htm
+++ b/Content/MainList.htm
@@ -4,7 +4,7 @@
         <link href="Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Topic Title</h1>
+        <h1>Main List</h1>
         <p>Delete this text and replace it with your own content.dfwqdqw</p>
     </body>
 </html>
